--- a/index.html
+++ b/index.html
@@ -188,24 +188,34 @@
       <p>Hallo! Saya YassProject, seorang Developer yang bersemangat mempelajari teknologi dan pengembangan web. Saya senang berbagi pengetahuan dan membuat proyek kreatif.</p>
     </div><div class="section food animate">
   <h2>My Girlfriend</h2>
-  <img src="https://i.imgur.com/food1.jpg" alt="Food 1">
-  <img src="https://i.imgur.com/food2.jpg" alt="Food 2">
-  <img src="https://i.imgur.com/food3.jpg" alt="Food 3">
+  <img src="https://files.catbox.moe/gx6td2.jpg" alt="Food 1">
+  <img src="https://files.catbox.moe/bmjwf6.jpg" alt="Food 2">
+  <img src="https://files.catbox.moe/eqee64.jpg" alt="Food 3">
 </div>
 
 <div class="section produk animate">
   <h2>Produk Saya</h2>
-  <img src="https://i.imgur.com/produk1.jpg" alt="Produk 1">
-  <p><strong>Surxrat 1.4 Publik</strong><br>Harga: Rp25.000</p>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20Surxrat%201.4%20Publik" class="btn">Beli via WhatsApp</a>
+  <img src="https://files.catbox.moe/4h6cg7.png" alt="Produk 2">
+  <p><strong>Surxrat 1.4 Public</strong>
+  "Surxrat 1.4 Public', 'Bisa Menyadap SMS, Otp, Menghidupkan Senter, Menggetarkan Hp korban, dan mengganti Wallpaper Hp Layar Korban."
+  <strong>Harga : Rp25.000</strong>
+  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxrat%201.4%20Public" class="btn">Beli via WhatsApp</a>
 
-  <img src="https://i.imgur.com/produk2.jpg" alt="Produk 2">
-  <p><strong>Bot WhatsApp</strong><br>Harga: Rp5.000</p>
+  <img src="https://files.catbox.moe/mugoxo.png" alt="Produk 2">
+  <p><strong>Bot WhatsApp</strong>
+  "Bot WhatsApp adalah program otomatis yang dapat berkomunikasi dengan pengguna WhatsApp. Bot ini dapat merespons pertanyaan pelanggan, memberikan informasi, dan menawarkan layanan."<strong>Harga : Rp5.000</strong>
   <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Bot%20WhatsApp" class="btn">Beli via WhatsApp</a>
 
-  <img src="https://i.imgur.com/produk2.jpg" alt="Produk 3">
-  <p><strong>Ransomware</strong><br>Harga: Rp50.000</p>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20Ransomware" class="btn">Beli via WhatsApp</a>
+ <img src="https://files.catbox.moe/bhqb15.png" alt="Produk 2">
+  <p><strong>Surxspy</strong>"Melihat Semua Notifikasi Korban Dengan Mudah."
+  <strong>Harga: Rp50.000</strong>
+  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxspy" class="btn">Beli via WhatsApp</a>
+  
+   <img src="https://files.catbox.moe/rw6fl7.png" alt="Produk 2">
+  <p><strong>Ransomware</strong>
+  "Ransomware adalah jenis malware yang mencegah Anda mengakses perangkat dan data yang tersimpan di dalamnya, biasanya dengan mengenkripsi file Anda. Kelompok kriminal kemudian akan meminta tebusan sebagai ganti."
+  <strong>Harga: Rp50.000</strong>
+  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxspy" class="btn">Beli via WhatsApp</a>
 </div>
 
 <div class="section animate">
