--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
       <p>Hallo! Saya YassProject, seorang Developer yang bersemangat mempelajari teknologi dan pengembangan web. Saya senang berbagi pengetahuan dan membuat proyek kreatif.</p>
     </div><div class="section food animate">
   <h2>My Girlfriend</h2>
-  <img src="https://files.catbox.moe/gx6td2.jpg" alt="Food 1">
-  <img src="https://files.catbox.moe/bmjwf6.jpg" alt="Food 2">
-  <img src="https://files.catbox.moe/eqee64.jpg" alt="Food 3">
+  <img src="https://files.catbox.moe/gx6td2.jpg" alt="Sayang 1">
+  <img src="https://files.catbox.moe/bmjwf6.jpg" alt="Sayang 2">
+  <img src="https://files.catbox.moe/eqee64.jpg" alt="Sayang 3">
+  <img src="https://files.catbox.moe/21qlzi.jpg" alt="Sayang 4">
 </div>
 
 <div class="section produk animate">
