--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
     <a href="login.html">Login</a>
     <a href="YassAI.html">YassAi</a>
     <a href="produk.html">Produk</a>
+    <a href="Alqur'an.html">Alqur'an</a>
     <a href="#" onclick="exitWebsite()">Exit</a>
   </div>  <div class="header">
     <img src="https://files.catbox.moe/l8nkom.jpg" alt="YassProject">
