--- a/Alqur'an.html
+++ b/Alqur'an.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,139 +11,158 @@
       --input-bg: #2a2a2a;
       --box: #1e1e1e;
       --highlight: #00ffc8;
-    }
+    }body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--bg);
+  color: var(--text);
+}
 
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-    }
+header {
+  background-color: var(--box);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 1rem;
+  border-bottom: 1px solid #333;
+  flex-wrap: wrap;
+}
 
-    header {
-      background-color: var(--box);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.7rem 1rem;
-      border-bottom: 1px solid #333;
-      flex-wrap: wrap;
-    }
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
 
-    .header-left {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      flex-wrap: wrap;
-    }
+.logo {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 
-    .logo {
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
+.search-bar {
+  background-color: var(--input-bg);
+  border: none;
+  border-radius: 20px;
+  padding: 0.4rem 1rem;
+  color: var(--text);
+  width: 180px;
+  font-size: 0.9rem;
+}
 
-    .search-bar {
-      background-color: var(--input-bg);
-      border: none;
-      border-radius: 20px;
-      padding: 0.4rem 1rem;
-      color: var(--text);
-      width: 180px;
-      font-size: 0.9rem;
-    }
+.header-left button {
+  background-color: #333;
+  border: none;
+  color: #fff;
+  padding: 0.4rem 0.8rem;
+  border-radius: 12px;
+  font-size: 0.75rem;
+  cursor: pointer;
+}
 
-    .header-left button {
-      background-color: #333;
-      border: none;
-      color: #fff;
-      padding: 0.4rem 0.8rem;
-      border-radius: 12px;
-      font-size: 0.75rem;
-      cursor: pointer;
-    }
+.user-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 0.8rem;
+}
 
-    .user-info {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      font-size: 0.8rem;
-    }
+#jadwalSholat {
+  background: #2a2a2a;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  color: #00ffc8;
+  font-size: 0.75rem;
+  margin-top: 0.3rem;
+  min-width: 180px;
+  text-align: center;
+}
 
-    #jadwalSholat {
-      background: #2a2a2a;
-      padding: 0.5rem 1rem;
-      border-radius: 10px;
-      color: #00ffc8;
-      font-size: 0.75rem;
-      margin-top: 0.3rem;
-    }
+.menu-section, .quick-access {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
 
-    .dropdown-list {
-      background-color: #1e1e1e;
-      border-radius: 10px;
-      max-height: 300px;
-      overflow-y: auto;
-      padding: 0.5rem;
-      margin: 0.5rem 1rem;
-      display: none;
-      width: 90%;
-      max-width: 300px;
-    }
+.menu-button, .quick-button {
+  background-color: #2a2a2a;
+  border: 1px solid #444;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  color: var(--highlight);
+  font-size: 0.8rem;
+  cursor: pointer;
+}
 
-    .dropdown-list button {
-      background-color: #333;
-      color: #fff;
-      border: none;
-      padding: 0.5rem;
-      margin: 2px 0;
-      border-radius: 8px;
-      width: 100%;
-      text-align: left;
-      cursor: pointer;
-    }
+.dropdown-list {
+  background-color: #1e1e1e;
+  border-radius: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
+  display: none;
+  width: 90%;
+  max-width: 300px;
+}
 
-    .content {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
+.dropdown-list button {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 0.5rem;
+  margin: 2px 0;
+  border-radius: 8px;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+}
 
-    .ayah {
-      margin-bottom: 2rem;
-      padding: 1rem;
-      background-color: var(--box);
-      border-radius: 12px;
-      cursor: pointer;
-    }
+.content {
+  padding: 2rem;
+  max-width: 800px;
+  margin: auto;
+}
 
-    .arabic {
-      font-size: 1.8rem;
-      text-align: right;
-      margin-bottom: 0.5rem;
-    }
+.ayah {
+  margin-bottom: 2rem;
+  padding: 1rem;
+  background-color: var(--box);
+  border-radius: 12px;
+  cursor: pointer;
+}
 
-    .latin {
-      font-size: 1rem;
-      color: #ccc;
-    }
+.arabic {
+  font-size: 1.8rem;
+  text-align: right;
+  margin-bottom: 0.5rem;
+}
 
-    .translation {
-      font-size: 1rem;
-      color: #aaa;
-    }
+.latin {
+  font-size: 1rem;
+  color: #ccc;
+}
 
-    .basmalah {
-      text-align: center;
-      font-size: 1.5rem;
-      color: var(--highlight);
-      margin: 1.5rem 0;
-    }
+.translation {
+  font-size: 1rem;
+  color: #aaa;
+}
 
-    @media (max-width: 768px) {
-      .content {
-        padding: 1rem;
-      }
-    }
+.basmalah {
+  text-align: center;
+  font-size: 1.5rem;
+  color: var(--highlight);
+  margin: 1.5rem 0;
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding: 1rem;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -157,101 +175,163 @@
         <button onclick="toggleTheme()">Mode Gelap/Terang</button>
       </div>
       <div class="user-info">
-        <div id="userNameDisplay">YassProject</div>
-        <div id="jadwalSholat">Subuh 04:30 | Dzuhur 12:00 | Ashar 15:15 | Maghrib 17:50 | Isya 19:00</div>
+        <div id="jadwalSholat">Memuat...</div>
       </div>
-    </header>
+    </header><div class="menu-section">
+  <button class="menu-button" onclick="showMenu('quran')">Al-Qur'an</button>
+  <button class="menu-button" onclick="showMenu('tahlil')">Tahlil & Yasin</button>
+  <button class="menu-button" onclick="showMenu('wirid')">Wirid & Doa</button>
+  <button class="menu-button" onclick="showMenu('maulid')">Maulid</button>
+</div>
 
-    <div id="dropdownSurat" class="dropdown-list"></div>
+<div class="quick-access">
+  <button class="quick-button" onclick="renderSurat(36)">Yasin</button>
+  <button class="quick-button" onclick="renderSurat(56)">Al-Waqi'ah</button>
+  <button class="quick-button" onclick="renderSurat(67)">Al-Mulk</button>
+  <button class="quick-button" onclick="renderSurat(18)">Al-Kahfi</button>
+  <button class="quick-button" onclick="renderSurat(55)">Ar-Rahman</button>
+  <button class="quick-button" onclick="renderSurat(1)">Al-Fatihah</button>
+</div>
 
-    <main class="content" id="quranContent">
-      <p style="color: gray;">Gunakan pencarian atau pilih surat untuk melihat isi Al-Qur'an.</p>
-    </main>
+<div id="dropdownSurat" class="dropdown-list"></div>
 
-    <audio id="ayahPlayer" controls style="display: none;"></audio>
-  </div>
+<main class="content" id="quranContent">
+  <p style="color: gray;">Gunakan pencarian atau pilih surat untuk melihat isi Al-Qur'an.</p>
+</main>
 
-  <script>
-    let surahDataGlobal = [];
+<audio id="ayahPlayer" controls style="display: none;"></audio>
 
-    function toggleTheme() {
-      document.body.classList.toggle("light");
+<script>
+  let surahDataGlobal = [];
+  const waktuList = [
+    'Imsak 04:20', 'Subuh 04:30', 'Syuruq 05:45',
+    'Dzuhur 12:00', 'Ashar 15:15', 'Maghrib 17:50', 'Isya 19:00'
+  ];
+  let waktuIndex = 0;
+
+  function toggleTheme() {
+    document.body.classList.toggle("light");
+  }
+
+  function updateWaktuSholat() {
+    document.getElementById("jadwalSholat").textContent = waktuList[waktuIndex];
+    waktuIndex = (waktuIndex + 1) % waktuList.length;
+  }
+  setInterval(updateWaktuSholat, 3000);
+  updateWaktuSholat();
+
+  async function fetchAllSurahs() {
+    const response = await fetch("https://api.quran.gading.dev/surah");
+    const data = await response.json();
+    surahDataGlobal = data.data;
+    generateSuratList();
+  }
+
+  function showSuratDropdown() {
+    const dropdown = document.getElementById("dropdownSurat");
+    dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+  }
+
+  function generateSuratList() {
+    const dropdown = document.getElementById("dropdownSurat");
+    dropdown.innerHTML = "";
+    surahDataGlobal.forEach(surah => {
+      const btn = document.createElement("button");
+      btn.textContent = `${surah.number}. ${surah.name.transliteration.id}`;
+      btn.onclick = () => {
+        renderSurat(surah.number);
+        dropdown.style.display = "none";
+      };
+      dropdown.appendChild(btn);
+    });
+  }
+
+  function filterSurah() {
+    const keyword = document.getElementById("searchInput").value.toLowerCase();
+    const filtered = surahDataGlobal.find(s =>
+      s.name.transliteration.id.toLowerCase().includes(keyword)
+    );
+    if (filtered) renderSurat(filtered.number);
+  }
+
+  async function renderSurat(number) {
+    const container = document.getElementById("quranContent");
+    container.innerHTML = "<p style='color: gray;'>Memuat...</p>";
+    const response = await fetch(`https://api.quran.gading.dev/surah/${number}`);
+    const data = await response.json();
+    const surat = data.data;
+
+    let basmalah = "";
+    if (surat.preBismillah && surat.number !== 9) {
+      basmalah = `<div class=\"basmalah\">${surat.preBismillah.text.arab}</div>`;
     }
 
-    async function fetchAllSurahs() {
-      const response = await fetch("https://api.quran.gading.dev/surah");
-      const data = await response.json();
-      surahDataGlobal = data.data;
-      generateSuratList();
+    container.innerHTML = `
+      <section id="surah-${number}">
+        <h2 style="color: var(--highlight); font-size: 1.5rem; border-bottom: 1px solid #444; padding-bottom: 0.5rem;">
+          ${surat.number}. ${surat.name.transliteration.id}
+        </h2>
+        <p class="latin">${surat.name.translation.id} - ${surat.revelation.id}</p>
+        ${basmalah}
+        <div>
+          ${surat.verses.map((ayah, index) => `
+            <div class="ayah" id="ayat-${index + 1}" onclick="playAyah('${ayah.audio.primary}')">
+              <div class="arabic">${ayah.text.arab}</div>
+              <div class="latin">${ayah.text.transliteration.en}</div>
+              <div class="translation">${ayah.translation.id}</div>
+            </div>
+          `).join("")}
+        </div>
+      </section>
+    `;
+  }
+
+  async function renderAyatKursi() {
+    await renderSurat(2);
+    setTimeout(() => {
+      const ayat = document.getElementById("ayat-255");
+      if (ayat) ayat.scrollIntoView({ behavior: "smooth", block: "center" });
+    }, 1000);
+  }
+
+  function playAyah(audioUrl) {
+    const player = document.getElementById("ayahPlayer");
+    player.src = audioUrl;
+    player.style.display = "block";
+    player.play();
+  }
+
+  function showMenu(type) {
+    const container = document.getElementById("quranContent");
+    let content = "";
+    switch(type) {
+      case 'tahlil':
+        content = `
+          <h2>Tahlil & Yasin</h2>
+          <p>La ilaha illallah (100x)</p>
+          <p>Astaghfirullah (100x)</p>
+          <p>Surat Yasin bisa dibuka dari tombol di atas.</p>`;
+        break;
+      case 'wirid':
+        content = `
+          <h2>Wirid & Doa</h2>
+          <p>Doa pagi: Allahumma bismika amuutu wa ahyaa</p>
+          <p>Doa setelah sholat: Allahumma antas salaam...</p>`;
+        break;
+      case 'maulid':
+        content = `
+          <h2>Maulid Nabi</h2>
+          <p>Shallallahu 'ala Muhammad...</p>
+          <p>Yaa Nabi Salaam 'Alaika...</p>`;
+        break;
+      default:
+        content = "<p style='color: gray;'>Gunakan pencarian atau pilih surat untuk melihat isi Al-Qur'an.</p>";
     }
+    container.innerHTML = content;
+  }
 
-    function showSuratDropdown() {
-      const dropdown = document.getElementById("dropdownSurat");
-      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-    }
+  fetchAllSurahs();
+</script>
 
-    function generateSuratList() {
-      const dropdown = document.getElementById("dropdownSurat");
-      dropdown.innerHTML = "";
-      surahDataGlobal.forEach(surah => {
-        const btn = document.createElement("button");
-        btn.textContent = `${surah.number}. ${surah.name.transliteration.id}`;
-        btn.onclick = () => {
-          renderSurat(surah.number);
-          dropdown.style.display = "none";
-        };
-        dropdown.appendChild(btn);
-      });
-    }
-
-    function filterSurah() {
-      const keyword = document.getElementById("searchInput").value.toLowerCase();
-      const filtered = surahDataGlobal.find(s =>
-        s.name.transliteration.id.toLowerCase().includes(keyword)
-      );
-      if (filtered) renderSurat(filtered.number);
-    }
-
-    async function renderSurat(number) {
-      const container = document.getElementById("quranContent");
-      container.innerHTML = "<p style='color: gray;'>Memuat...</p>";
-      const response = await fetch(`https://api.quran.gading.dev/surah/${number}`);
-      const data = await response.json();
-      const surat = data.data;
-
-      let basmalah = "";
-      if (surat.preBismillah && surat.number !== 9) {
-        basmalah = `<div class="basmalah">${surat.preBismillah.text.arab}</div>`;
-      }
-
-      container.innerHTML = `
-        <section id="surah-${number}">
-          <h2 style="color: var(--highlight); font-size: 1.5rem; border-bottom: 1px solid #444; padding-bottom: 0.5rem;">
-            ${surat.number}. ${surat.name.transliteration.id}
-          </h2>
-          <p class="latin">${surat.name.translation.id} - ${surat.revelation.id}</p>
-          ${basmalah}
-          <div>
-            ${surat.verses.map(ayah => `
-              <div class="ayah" onclick="playAyah('${ayah.audio.primary}')">
-                <div class="arabic">${ayah.text.arab}</div>
-                <div class="latin">${ayah.text.transliteration.en}</div>
-                <div class="translation">${ayah.translation.id}</div>
-              </div>
-            `).join("")}
-          </div>
-        </section>
-      `;
-    }
-
-    function playAyah(audioUrl) {
-      const player = document.getElementById("ayahPlayer");
-      player.src = audioUrl;
-      player.style.display = "block";
-      player.play();
-    }
-
-    fetchAllSurahs();
-  </script>
 </body>
 </html>
