--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YassProject</title>
+  <title>YaZxOfficiall</title>
   <style>
     :root {
-      --biru-tua: #0077b6;
-      --biru-muda: #00b4d8;
-      --biru-default: #2196f3;
+      --dark-primary: #1f1f1f;
+      --dark-secondary: #2c2c2c;
+      --accent-color: #264653;
+      --text-light: #ffffff;
+      --btn-hover: #1e88e5;
     }
+
     * {
       box-sizing: border-box;
     }
+
     html {
       scroll-behavior: smooth;
     }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, var(--biru-muda), var(--biru-tua));
-      color: #fff;
+      background: linear-gradient(135deg, var(--dark-primary), var(--dark-secondary));
+      color: var(--text-light);
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .animate {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.6s ease-out;
-    }
-    .animate.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
+
     .menu-toggle {
       position: fixed;
       top: 20px;
@@ -43,6 +37,7 @@
       cursor: pointer;
       z-index: 1001;
     }
+
     .menu-toggle span {
       display: block;
       width: 100%;
@@ -52,32 +47,38 @@
       border-radius: 2px;
       transition: 0.4s;
     }
+
     .menu-toggle.active span:nth-child(1) {
       transform: rotate(45deg) translate(5px, 5px);
     }
+
     .menu-toggle.active span:nth-child(2) {
       opacity: 0;
     }
+
     .menu-toggle.active span:nth-child(3) {
       transform: rotate(-45deg) translate(6px, -6px);
     }
+
     .sidebar {
       position: fixed;
       top: 0;
       left: 0;
       width: 220px;
       height: 100%;
-      background: linear-gradient(to bottom, var(--biru-tua), var(--biru-muda));
+      background: var(--dark-secondary);
       color: white;
       padding: 60px 20px;
       transform: translateX(-100%);
       transition: transform 0.4s ease;
       z-index: 1000;
-      box-shadow: 2px 0 10px rgba(0,0,0,0.3);
+      box-shadow: 2px 0 10px rgba(0,0,0,0.5);
     }
+
     .sidebar.show {
       transform: translateX(0);
     }
+
     .sidebar a {
       display: block;
       color: white;
@@ -86,82 +87,94 @@
       font-weight: bold;
       transition: 0.3s;
     }
+
     .sidebar a:hover {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.1);
       padding-left: 10px;
       border-radius: 5px;
     }
+
     .header {
       text-align: center;
-      background: var(--biru-tua);
+      background: var(--accent-color);
       padding: 80px 20px 50px;
       clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
       color: white;
-      position: relative;
     }
+
     .header img {
       width: 130px;
       border-radius: 50%;
       border: 4px solid white;
-      box-shadow: 0 0 10px rgba(255,255,255,0.4);
+      box-shadow: 0 0 10px rgba(255,255,255,0.3);
       transition: transform 0.3s;
     }
+
     .header img:hover {
       transform: scale(1.05);
     }
+
     h1 {
       margin: 10px 0 5px;
     }
+
     .container {
       max-width: 700px;
       margin: auto;
       padding: 20px;
     }
+
     .section {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.05);
       margin-top: 20px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      backdrop-filter: blur(10px);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      backdrop-filter: blur(8px);
     }
+
     .section h2 {
       color: #fff;
       border-bottom: 2px solid #fff;
       padding-bottom: 5px;
     }
+
     .food img, .produk img {
       width: 100%;
       border-radius: 10px;
       margin-top: 10px;
       transition: transform 0.3s;
     }
+
     .food img:hover, .produk img:hover {
       transform: scale(1.03);
     }
+
     .produk p {
       margin: 5px 0;
     }
+
     .btn {
       display: inline-block;
-      text-align: center;
       padding: 12px 20px;
       margin: 10px 5px;
       border-radius: 25px;
       text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s, transform 0.2s;
-      background: var(--biru-default);
+      background: var(--accent-color);
       color: white;
+      transition: background 0.3s, transform 0.2s;
     }
+
     .btn:hover {
+      background: var(--btn-hover);
       transform: scale(1.05);
-      background: #1976d2;
     }
+
     .footer {
       text-align: center;
       padding: 40px 0;
-      background: var(--biru-tua);
+      background: var(--accent-color);
       clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
       color: white;
     }
@@ -169,61 +182,77 @@
 </head>
 <body>
   <div class="menu-toggle" onclick="toggleMenu(this)">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>  <div class="sidebar">
+    <span></span><span></span><span></span>
+  </div>
+
+  <div class="sidebar">
     <a href="dasboard.html">Dashboard</a>
     <a href="login.html">Login</a>
-    <a href="YassAI.html">YassAi</a>
+    <a href="YassAI.html">YaZxAI</a>
     <a href="produk.html">Produk</a>
     <a href="Alqur'an.html">Alqur'an</a>
     <a href="#" onclick="exitWebsite()">Exit</a>
-  </div>  <div class="header">
-    <img src="https://files.catbox.moe/l8nkom.jpg" alt="YassProject">
-    <h1>YassProject</h1>
+  </div>
+
+  <div class="header">
+    <img src="https://files.catbox.moe/h30050.png" alt="YaZxOfficiall">
+    <h1>YaZxOfficiall</h1>
     <p>Developer script</p>
-  </div>  <div class="container">
-    <div class="section animate">
+  </div>
+
+  <div class="container">
+    <div class="section">
       <h2>Tentang Saya</h2>
-      <p>Hallo! Saya YassProject, seorang Developer yang bersemangat mempelajari teknologi dan pengembangan web. Saya senang berbagi pengetahuan dan membuat proyek kreatif.</p>
-<div class="section produk animate">
-  <h2>Produk Saya</h2>
-  <img src="https://files.catbox.moe/4h6cg7.png" alt="Produk 2">
-  <p><strong>Surxrat 1.4 Public</strong>
-  "Surxrat 1.4 Public', 'Bisa Menyadap SMS, Otp, Menghidupkan Senter, Menggetarkan Hp korban, dan mengganti Wallpaper Hp Layar Korban."
-  <strong>Harga : Rp25.000</strong>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxrat%201.4%20Public" class="btn">Beli via WhatsApp</a>
+      <p>Hallo! Saya YaZxOfficiall, seorang Developer yang bersemangat mempelajari teknologi dan pengembangan web. Saya senang berbagi pengetahuan dan membuat proyek kreatif.</p>
+    </div>
 
-  <img src="https://files.catbox.moe/mugoxo.png" alt="Produk 2">
-  <p><strong>Bot WhatsApp</strong>
-  "Bot WhatsApp adalah program otomatis yang dapat berkomunikasi dengan pengguna WhatsApp. Bot ini dapat merespons pertanyaan pelanggan, memberikan informasi, dan menawarkan layanan."<strong>Harga : Rp5.000</strong>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Bot%20WhatsApp" class="btn">Beli via WhatsApp</a>
+    <div class="section produk">
+      <h2>Produk Saya</h2>
 
- <img src="https://files.catbox.moe/bhqb15.png" alt="Produk 2">
-  <p><strong>Surxspy</strong>"Melihat Semua Notifikasi Korban Dengan Mudah."
-  <strong>Harga: Rp50.000</strong>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxspy" class="btn">Beli via WhatsApp</a>
-  
-   <img src="https://files.catbox.moe/rw6fl7.png" alt="Produk 2">
-  <p><strong>Ransomware</strong>
-  "Ransomware adalah jenis malware yang mencegah Anda mengakses perangkat dan data yang tersimpan di dalamnya, biasanya dengan mengenkripsi file Anda. Kelompok kriminal kemudian akan meminta tebusan sebagai ganti."
-  <strong>Harga: Rp50.000</strong>
-  <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxspy" class="btn">Beli via WhatsApp</a>
-</div>
+      <img src="https://files.catbox.moe/4h6cg7.png" alt="Produk Surxrat">
+      <p><strong>Surxrat 1.4 Public</strong><br>
+        Bisa menyadap SMS, OTP, menghidupkan senter, menggetarkan HP korban, dan mengganti wallpaper layar korban.<br>
+        <strong>Harga: Rp25.000</strong>
+      </p>
+      <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxrat%201.4%20Public" class="btn">Beli via WhatsApp</a>
 
-<div class="section animate">
-  <h2>Hubungi Saya</h2>
-  <p>Jika Anda tertarik untuk bekerja sama atau memiliki pertanyaan, hubungi saya:</p>
-  <a href="https://wa.me/6285723956572" class="btn">whatsapp</a>
-  <a href="https://t.me/YassProject" class="btn">Telegram</a>
-  <a href="https://t.me/YassProject" class="btn">Tiktok</a>
-  <a href="https://whatsapp.com/channel/0029VaoeOmdGOj9ncHIO2L1H" class="btn">Saluran WhatsApp</a>
-</div>
+      <img src="https://files.catbox.moe/mugoxo.png" alt="Produk Bot WhatsApp">
+      <p><strong>Bot WhatsApp</strong><br>
+        Bot WhatsApp adalah program otomatis yang dapat merespons pertanyaan pelanggan, memberikan info, dan layanan.<br>
+        <strong>Harga: Rp5.000</strong>
+      </p>
+      <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Bot%20WhatsApp" class="btn">Beli via WhatsApp</a>
 
-  </div>  <div class="footer animate">
-    © 2025 - 2026 Developer YassProject, Semua Hak Dilindungi Undang-Undang!
-  </div>  <script>
+      <img src="https://files.catbox.moe/bhqb15.png" alt="Produk Surxspy">
+      <p><strong>Surxspy</strong><br>
+        Melihat semua notifikasi korban dengan mudah.<br>
+        <strong>Harga: Rp50.000</strong>
+      </p>
+      <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Surxspy" class="btn">Beli via WhatsApp</a>
+
+      <img src="https://files.catbox.moe/rw6fl7.png" alt="Produk Ransomware">
+      <p><strong>Ransomware</strong><br>
+        Mencegah akses ke perangkat dan data dengan enkripsi, dan meminta tebusan.<br>
+        <strong>Harga: Rp50.000</strong>
+      </p>
+      <a href="https://wa.me/6285723956572?text=Halo%20saya%20ingin%20beli%20produk%20Ransomware" class="btn">Beli via WhatsApp</a>
+    </div>
+
+    <div class="section">
+      <h2>Hubungi Saya</h2>
+      <p>Jika Anda tertarik untuk bekerja sama atau memiliki pertanyaan, hubungi saya:</p>
+      <a href="https://wa.me/6285723956572" class="btn">WhatsApp</a>
+      <a href="https://t.me/YassProject" class="btn">Telegram</a>
+      <a href="https://t.me/YassProject" class="btn">Tiktok</a>
+      <a href="https://whatsapp.com/channel/0029VaoeOmdGOj9ncHIO2L1H" class="btn">Saluran WhatsApp</a>
+    </div>
+  </div>
+
+  <div class="footer">
+    © 2025 - 2026 Developer YaZxOfficiall, Semua Hak Dilindungi Undang-Undang!
+  </div>
+
+  <script>
     function toggleMenu(el) {
       el.classList.toggle('active');
       document.querySelector('.sidebar').classList.toggle('show');
@@ -233,18 +262,6 @@
       alert('Keluar dari website');
       window.location.href = 'about:blank';
     }
-
-    const animItems = document.querySelectorAll('.animate');
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, { threshold: 0.1 });
-
-    animItems.forEach(item => {
-      observer.observe(item);
-    });
-  </script></body>
+  </script>
+</body>
 </html>
