--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 
   <div class="sidebar">
     <a href="dasboard.html">Dashboard</a>
+    <a href="portofolio.html">Portofolio</a>
     <a href="login.html">Login</a>
     <a href="YassAI.html">YaZxAI</a>
     <a href="produk.html">Produk</a>
