--- a/Alqur'an.html
+++ b/Alqur'an.html
@@ -1,115 +1,93 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Al-Quran</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --bg: #121212;
-      --text: #ffffff;
-      --input-bg: #2a2a2a;
-      --box: #1e1e1e;
-      --highlight: #00ffc8;
-    }body {
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Al-Qur'an Digital</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Amiri&display=swap" rel="stylesheet" />
+<style>
+:root {
+  --bg: #0d0d0d;
+  --text: #ffffff;
+  --input-bg: #1a1a1a;
+  --box: #141414;
+  --highlight: #00ffc8;
+  --shadow: 0 0 15px rgba(0,255,200,0.4);
+}
+body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color: var(--bg);
   color: var(--text);
+  transition: background 0.4s, color 0.4s;
 }
-
 header {
+  text-align: center;
+  padding: 2rem 1rem 1rem;
   background-color: var(--box);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 1rem;
-  border-bottom: 1px solid #333;
-  flex-wrap: wrap;
+  box-shadow: var(--shadow);
 }
-
-.header-left {
+header h1 {
+  font-family: 'Amiri', serif;
+  font-size: 2.5rem;
+  color: var(--highlight);
+  text-shadow: 0 0 10px rgba(0,255,200,0.6);
+  margin-bottom: 1rem;
+}
+.search-wrapper {
   display: flex;
-  align-items: center;
+  justify-content: center;
   gap: 0.5rem;
-  flex-wrap: wrap;
 }
-
-.logo {
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
 .search-bar {
   background-color: var(--input-bg);
   border: none;
-  border-radius: 20px;
-  padding: 0.4rem 1rem;
+  border-radius: 25px;
+  padding: 0.6rem 1rem;
   color: var(--text);
-  width: 180px;
-  font-size: 0.9rem;
+  width: 250px;
+  font-size: 1rem;
+  box-shadow: inset 0 0 5px rgba(0,255,200,0.2);
+  transition: 0.3s;
 }
-
-.header-left button {
-  background-color: #333;
-  border: none;
-  color: #fff;
-  padding: 0.4rem 0.8rem;
-  border-radius: 12px;
-  font-size: 0.75rem;
-  cursor: pointer;
+.search-bar:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(0,255,200,0.6);
 }
-
-.user-info {
+.nav-buttons {
+  margin-top: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  font-size: 0.8rem;
-}
-
-#jadwalSholat {
-  background: #2a2a2a;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
-  color: #00ffc8;
-  font-size: 0.75rem;
-  margin-top: 0.3rem;
-  min-width: 180px;
-  text-align: center;
-}
-
-.menu-section, .quick-access {
-  display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  gap: 0.5rem;
-  margin: 1rem;
+  flex-wrap: wrap;
+  gap: 0.6rem;
 }
-
-.menu-button, .quick-button {
-  background-color: #2a2a2a;
-  border: 1px solid #444;
+.nav-button {
+  background-color: var(--input-bg);
+  border: 1px solid #333;
+  color: var(--highlight);
   padding: 0.5rem 1rem;
   border-radius: 20px;
-  color: var(--highlight);
-  font-size: 0.8rem;
   cursor: pointer;
+  transition: 0.3s;
 }
-
+.nav-button:hover {
+  background-color: var(--highlight);
+  color: black;
+  box-shadow: var(--shadow);
+}
 .dropdown-list {
-  background-color: #1e1e1e;
+  background-color: #1a1a1a;
   border-radius: 10px;
   max-height: 300px;
   overflow-y: auto;
   padding: 0.5rem;
-  margin: 0.5rem 1rem;
+  margin: 0.5rem auto;
   display: none;
   width: 90%;
   max-width: 300px;
 }
-
 .dropdown-list button {
-  background-color: #333;
+  background-color: #222;
   color: #fff;
   border: none;
   padding: 0.5rem;
@@ -118,220 +96,260 @@ header {
   width: 100%;
   text-align: left;
   cursor: pointer;
+  transition: 0.3s;
 }
-
+.dropdown-list button:hover {
+  background-color: var(--highlight);
+  color: black;
+}
 .content {
   padding: 2rem;
   max-width: 800px;
   margin: auto;
 }
-
 .ayah {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   padding: 1rem;
   background-color: var(--box);
   border-radius: 12px;
   cursor: pointer;
+  transition: 0.3s;
 }
-
+.ayah:hover {
+  box-shadow: var(--shadow);
+}
 .arabic {
   font-size: 1.8rem;
   text-align: right;
   margin-bottom: 0.5rem;
+  font-family: 'Amiri', serif;
 }
-
 .latin {
   font-size: 1rem;
   color: #ccc;
 }
-
 .translation {
   font-size: 1rem;
   color: #aaa;
 }
-
 .basmalah {
   text-align: center;
   font-size: 1.5rem;
   color: var(--highlight);
   margin: 1.5rem 0;
 }
-
-@media (max-width: 768px) {
-  .content {
-    padding: 1rem;
-  }
+#toTop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--highlight);
+  color: black;
+  border: none;
+  padding: 0.6rem 1rem;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: var(--shadow);
+  display: none;
 }
-
-  </style>
+</style>
 </head>
 <body>
-  <div id="appContent">
-    <header>
-      <div class="header-left">
-        <div class="logo">Al-Quran</div>
-        <input type="text" class="search-bar" id="searchInput" placeholder="Cari surat..." oninput="filterSurah()" />
-        <button onclick="showSuratDropdown()">Surat</button>
-        <button onclick="toggleTheme()">Mode Gelap/Terang</button>
-      </div>
-      <div class="user-info">
-        <div id="jadwalSholat">Memuat...</div>
-      </div>
-    </header><div class="menu-section">
-  <button class="menu-button" onclick="showMenu('quran')">Al-Qur'an</button>
-  <button class="menu-button" onclick="showMenu('tahlil')">Tahlil & Yasin</button>
-  <button class="menu-button" onclick="showMenu('wirid')">Wirid & Doa</button>
-  <button class="menu-button" onclick="showMenu('maulid')">Maulid</button>
-</div>
 
-<div class="quick-access">
-  <button class="quick-button" onclick="renderSurat(36)">Yasin</button>
-  <button class="quick-button" onclick="renderSurat(56)">Al-Waqi'ah</button>
-  <button class="quick-button" onclick="renderSurat(67)">Al-Mulk</button>
-  <button class="quick-button" onclick="renderSurat(18)">Al-Kahfi</button>
-  <button class="quick-button" onclick="renderSurat(55)">Ar-Rahman</button>
-  <button class="quick-button" onclick="renderSurat(1)">Al-Fatihah</button>
-</div>
+<header>
+  <h1>Al-Qur'an Digital</h1>
+  <div class="search-wrapper">
+    <input type="text" class="search-bar" id="searchInput" placeholder="Cari surat..." oninput="filterSurah()" />
+  </div>
+  <div class="nav-buttons">
+    <button class="nav-button" onclick="showSuratDropdown()">Surat</button>
+    <button class="nav-button" onclick="showJuzDropdown()">Juz</button>
+    <button class="nav-button" onclick="showAyatHarian()">Ayat Harian</button>
+    <button class="nav-button" onclick="showFavorit()">Favorit</button>
+    <button class="nav-button" onclick="toggleTheme()">🌙/☀</button>
+  </div>
+</header>
 
 <div id="dropdownSurat" class="dropdown-list"></div>
+<div id="dropdownJuz" class="dropdown-list"></div>
 
 <main class="content" id="quranContent">
   <p style="color: gray;">Gunakan pencarian atau pilih surat untuk melihat isi Al-Qur'an.</p>
 </main>
 
-<audio id="ayahPlayer" controls style="display: none;"></audio>
+<audio id="ayahPlayer" controls style="display:none;"></audio>
+<button id="toTop" onclick="window.scrollTo({top:0, behavior:'smooth'})">⬆</button>
 
 <script>
-  let surahDataGlobal = [];
-  const waktuList = [
-    'Imsak 04:20', 'Subuh 04:30', 'Syuruq 05:45',
-    'Dzuhur 12:00', 'Ashar 15:15', 'Maghrib 17:50', 'Isya 19:00'
-  ];
-  let waktuIndex = 0;
+let surahDataGlobal = [];
+let favoritList = JSON.parse(localStorage.getItem("favoritSurat") || "[]");
+let lastRead = JSON.parse(localStorage.getItem("lastRead") || "null");
 
-  function toggleTheme() {
-    document.body.classList.toggle("light");
+window.onscroll = () => {
+  document.getElementById("toTop").style.display = window.scrollY > 200 ? "block" : "none";
+};
+
+async function fetchAllSurahs() {
+  const res = await fetch("https://api.quran.gading.dev/surah");
+  const data = await res.json();
+  surahDataGlobal = data.data;
+  generateSuratList();
+}
+function showSuratDropdown() {
+  toggleDropdown("dropdownSurat");
+}
+function showJuzDropdown() {
+  const dropdown = document.getElementById("dropdownJuz");
+  dropdown.innerHTML = "";
+  for(let i=1;i<=30;i++){
+    const btn = document.createElement("button");
+    btn.textContent = "Juz " + i;
+    btn.onclick = () => alert("Fitur Juz " + i + " coming soon");
+    dropdown.appendChild(btn);
+  }
+  toggleDropdown("dropdownJuz");
+}
+function toggleDropdown(id) {
+  const el = document.getElementById(id);
+  el.style.display = el.style.display === "block" ? "none" : "block";
+}
+function generateSuratList() {
+  const dropdown = document.getElementById("dropdownSurat");
+  dropdown.innerHTML = "";
+  surahDataGlobal.forEach(surah => {
+    const btn = document.createElement("button");
+    btn.textContent = `${surah.number}. ${surah.name.transliteration.id}`;
+    btn.onclick = () => {
+      renderSurat(surah.number);
+      dropdown.style.display = "none";
+    };
+    dropdown.appendChild(btn);
+  });
+}
+function filterSurah() {
+  const keyword = document.getElementById("searchInput").value.toLowerCase();
+  const filtered = surahDataGlobal.find(s =>
+    s.name.transliteration.id.toLowerCase().includes(keyword)
+  );
+  if (filtered) renderSurat(filtered.number);
+}
+async function renderSurat(number, ayatIndex=null) {
+  const container = document.getElementById("quranContent");
+  container.innerHTML = "<p style='color: gray;'>Memuat...</p>";
+  const res = await fetch(`https://api.quran.gading.dev/surah/${number}`);
+  const data = await res.json();
+  const surat = data.data;
+
+  localStorage.setItem("lastRead", JSON.stringify({ number, name: surat.name.transliteration.id }));
+
+  let basmalah = "";
+  if (surat.preBismillah && surat.number !== 9) {
+    basmalah = `<div class="basmalah">${surat.preBismillah.text.arab}</div>`;
   }
 
-  function updateWaktuSholat() {
-    document.getElementById("jadwalSholat").textContent = waktuList[waktuIndex];
-    waktuIndex = (waktuIndex + 1) % waktuList.length;
-  }
-  setInterval(updateWaktuSholat, 3000);
-  updateWaktuSholat();
-
-  async function fetchAllSurahs() {
-    const response = await fetch("https://api.quran.gading.dev/surah");
-    const data = await response.json();
-    surahDataGlobal = data.data;
-    generateSuratList();
-  }
-
-  function showSuratDropdown() {
-    const dropdown = document.getElementById("dropdownSurat");
-    dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-  }
-
-  function generateSuratList() {
-    const dropdown = document.getElementById("dropdownSurat");
-    dropdown.innerHTML = "";
-    surahDataGlobal.forEach(surah => {
-      const btn = document.createElement("button");
-      btn.textContent = `${surah.number}. ${surah.name.transliteration.id}`;
-      btn.onclick = () => {
-        renderSurat(surah.number);
-        dropdown.style.display = "none";
-      };
-      dropdown.appendChild(btn);
-    });
-  }
-
-  function filterSurah() {
-    const keyword = document.getElementById("searchInput").value.toLowerCase();
-    const filtered = surahDataGlobal.find(s =>
-      s.name.transliteration.id.toLowerCase().includes(keyword)
-    );
-    if (filtered) renderSurat(filtered.number);
-  }
-
-  async function renderSurat(number) {
-    const container = document.getElementById("quranContent");
-    container.innerHTML = "<p style='color: gray;'>Memuat...</p>";
-    const response = await fetch(`https://api.quran.gading.dev/surah/${number}`);
-    const data = await response.json();
-    const surat = data.data;
-
-    let basmalah = "";
-    if (surat.preBismillah && surat.number !== 9) {
-      basmalah = `<div class=\"basmalah\">${surat.preBismillah.text.arab}</div>`;
-    }
-
-    container.innerHTML = `
-      <section id="surah-${number}">
-        <h2 style="color: var(--highlight); font-size: 1.5rem; border-bottom: 1px solid #444; padding-bottom: 0.5rem;">
-          ${surat.number}. ${surat.name.transliteration.id}
-        </h2>
-        <p class="latin">${surat.name.translation.id} - ${surat.revelation.id}</p>
-        ${basmalah}
-        <div>
-          ${surat.verses.map((ayah, index) => `
-            <div class="ayah" id="ayat-${index + 1}" onclick="playAyah('${ayah.audio.primary}')">
-              <div class="arabic">${ayah.text.arab}</div>
-              <div class="latin">${ayah.text.transliteration.en}</div>
-              <div class="translation">${ayah.translation.id}</div>
-            </div>
-          `).join("")}
+  container.innerHTML = `
+    <section>
+      <h2 style="color: var(--highlight); font-size: 1.5rem; border-bottom: 1px solid #444; padding-bottom: 0.5rem;">
+        ${surat.number}. ${surat.name.transliteration.id}
+        <button style="float:right;background:var(--highlight);color:black;border:none;border-radius:8px;padding:0.3rem 0.6rem;cursor:pointer" onclick="tambahFavorit(${surat.number}, '${surat.name.transliteration.id}')">★</button>
+      </h2>
+      <p class="latin">${surat.name.translation.id} - ${surat.revelation.id}</p>
+      <button onclick="playAllAyat(${number})" style="background-color:#00ffc8;color:black;padding:0.5rem 1rem;border:none;border-radius:10px;cursor:pointer;margin:1rem 0;">▶ Play Surat</button>
+      ${basmalah}
+      ${surat.verses.map((ayah, index) => `
+        <div id="ayah-${index}" class="ayah" onclick="playAyah('${ayah.audio.primary}', ${index})">
+          <div class="arabic">${ayah.text.arab}</div>
+          <div class="latin">(${index + 1}) ${ayah.text.transliteration.en}</div>
+          <div class="translation">${ayah.translation.id}</div>
+          <button style="margin-top:5px;background:var(--highlight);color:black;border:none;border-radius:6px;padding:0.3rem 0.6rem;cursor:pointer" onclick="shareAyah(event, '${ayah.text.arab}', '${ayah.translation.id}')">Share</button>
         </div>
-      </section>
-    `;
-  }
+      `).join("")}
+    </section>
+  `;
 
-  async function renderAyatKursi() {
-    await renderSurat(2);
-    setTimeout(() => {
-      const ayat = document.getElementById("ayat-255");
-      if (ayat) ayat.scrollIntoView({ behavior: "smooth", block: "center" });
-    }, 1000);
+  if (ayatIndex !== null) {
+    document.getElementById(`ayah-${ayatIndex}`)?.scrollIntoView({behavior:"smooth", block:"center"});
   }
-
-  function playAyah(audioUrl) {
-    const player = document.getElementById("ayahPlayer");
-    player.src = audioUrl;
-    player.style.display = "block";
-    player.play();
-  }
-
-  function showMenu(type) {
-    const container = document.getElementById("quranContent");
-    let content = "";
-    switch(type) {
-      case 'tahlil':
-        content = `
-          <h2>Tahlil & Yasin</h2>
-          <p>La ilaha illallah (100x)</p>
-          <p>Astaghfirullah (100x)</p>
-          <p>Surat Yasin bisa dibuka dari tombol di atas.</p>`;
-        break;
-      case 'wirid':
-        content = `
-          <h2>Wirid & Doa</h2>
-          <p>Doa pagi: Allahumma bismika amuutu wa ahyaa</p>
-          <p>Doa setelah sholat: Allahumma antas salaam...</p>`;
-        break;
-      case 'maulid':
-        content = `
-          <h2>Maulid Nabi</h2>
-          <p>Shallallahu 'ala Muhammad...</p>
-          <p>Yaa Nabi Salaam 'Alaika...</p>`;
-        break;
-      default:
-        content = "<p style='color: gray;'>Gunakan pencarian atau pilih surat untuk melihat isi Al-Qur'an.</p>";
+}
+function playAyah(url, idx) {
+  const player = document.getElementById("ayahPlayer");
+  player.src = url;
+  player.style.display = "block";
+  player.play();
+  document.querySelectorAll(".ayah").forEach(a=>a.style.boxShadow="none");
+  document.getElementById(`ayah-${idx}`).style.boxShadow = "0 0 15px rgba(0,255,200,0.8)";
+}
+async function playAllAyat(number) {
+  const res = await fetch(`https://api.quran.gading.dev/surah/${number}`);
+  const data = await res.json();
+  const audios = data.data.verses.map(v => v.audio.primary);
+  const player = document.getElementById("ayahPlayer");
+  let idx = 0;
+  player.style.display = "block";
+  player.src = audios[idx];
+  player.play();
+  player.onended = function () {
+    idx++;
+    if (idx < audios.length) {
+      player.src = audios[idx];
+      player.play();
+      document.querySelectorAll(".ayah").forEach(a=>a.style.boxShadow="none");
+      document.getElementById(`ayah-${idx}`).scrollIntoView({behavior:"smooth", block:"center"});
+      document.getElementById(`ayah-${idx}`).style.boxShadow = "0 0 15px rgba(0,255,200,0.8)";
     }
-    container.innerHTML = content;
+  };
+}
+function tambahFavorit(num, name) {
+  if (!favoritList.find(f => f.num === num)) {
+    favoritList.push({ num, name });
+    localStorage.setItem("favoritSurat", JSON.stringify(favoritList));
+    alert("Ditambahkan ke favorit!");
   }
-
-  fetchAllSurahs();
+}
+function showFavorit() {
+  const container = document.getElementById("quranContent");
+  if (favoritList.length === 0) {
+    container.innerHTML = "<p style='color:gray'>Belum ada surat favorit</p>";
+  } else {
+    container.innerHTML = `<h2 style="color:var(--highlight)">Favorit</h2>` +
+      favoritList.map(f => `<button class="nav-button" onclick="renderSurat(${f.num})">${f.num}. ${f.name}</button>`).join("");
+  }
+}
+async function showAyatHarian() {
+  const res = await fetch(`https://api.quran.gading.dev/surah/${Math.floor(Math.random()*114)+1}`);
+  const data = await res.json();
+  const surat = data.data;
+  const randomAyat = surat.verses[Math.floor(Math.random()*surat.verses.length)];
+  document.getElementById("quranContent").innerHTML = `
+    <h2 style="color:var(--highlight)">Ayat Hari Ini</h2>
+    <div class="ayah">
+      <div class="arabic">${randomAyat.text.arab}</div>
+      <div class="translation">${randomAyat.translation.id}</div>
+    </div>
+  `;
+}
+function toggleTheme() {
+  if (document.body.style.backgroundColor === "white") {
+    document.body.style.backgroundColor = "var(--bg)";
+    document.body.style.color = "var(--text)";
+  } else {
+    document.body.style.backgroundColor = "white";
+    document.body.style.color = "black";
+  }
+}
+function shareAyah(e, arab, terjemah) {
+  e.stopPropagation();
+  const text = `${arab}\n${terjemah}`;
+  const url = `https://wa.me/?text=${encodeURIComponent(text)}`;
+  window.open(url, "_blank");
+}
+if (lastRead) {
+  document.getElementById("quranContent").innerHTML += `
+    <div style="margin-top:1rem;">
+      <button onclick="renderSurat(${lastRead.number})" style="background:var(--highlight);color:black;padding:0.5rem 1rem;border:none;border-radius:8px;cursor:pointer;">📖 Lanjut Baca ${lastRead.name}</button>
+    </div>
+  `;
+}
+fetchAllSurahs();
 </script>
-
 </body>
 </html>
