Add payment link to index.html

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     <a href="YassAI.html">YaZxAI</a>
     <a href="produk.html">Produk</a>
     <a href="Alqur'an.html">Alqur'an</a>
+    <a href="payment.html">payment</a>
     <a href="#" onclick="exitWebsite()">Exit</a>
   </div>
 
