--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Payment YAZXOFFICIALL — Full</title>
+<title>Payment YAZXOFFICIALL </title>
 
 <!-- html2canvas CDN for snapshot/download -->
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -91,7 +91,7 @@
 <div class="wrap">
   <!-- LEFT: Form -->
   <section class="panel" aria-labelledby="title">
-    <header><h1 id="title">Checkout — Demo Payment</h1><p class="small">Isi data lalu klik Bayar Sekarang untuk melihat metode & instruksi.</p></header>
+    <header><h1 id="title">Checkout YaZxXz — Payment</h1><p class="small">Isi data lalu klik Bayar Sekarang untuk melihat metode & instruksi.</p></header>
 
     <form id="payment-form" novalidate>
       <label for="name">Nama Lengkap</label>
