Update WhatsApp channel link and add group link

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
       <a href="https://wa.me/6285723956572" class="btn">WhatsApp</a>
       <a href="https://t.me/YassProject" class="btn">Telegram</a>
       <a href="https://t.me/YassProject" class="btn">Tiktok</a>
-      <a href="https://whatsapp.com/channel/0029VaoeOmdGOj9ncHIO2L1H" class="btn">Saluran WhatsApp</a>
+      <a href="https://whatsapp.com/channel/0029VayXPrv6BIEZKIp0BI0x" class="btn">Saluran WhatsApp</a>
+      <a href="https://chat.whatsapp.com/DSFw0lM79r98yKG31ToI2E" class="btn">Grup WhatsApp</a>
     </div>
   </div>
 
